--- a/client2/src/index.css
+++ b/client2/src/index.css
@@ -105,7 +105,7 @@ margin-left: 50px; */
 }
 
 .left{
-    background-image: url(https://scontent.flos1-2.fna.fbcdn.net/v/t39.30808-6/312807886_429844435990666_4495001303271278477_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_eui2=AeFGsQjz0W-kcAQcPlPB_GSspXXYUrAOwAulddhSsA7AC1xn-D5k9I1y3a89CQ4OHoa9ge43oofUeUCX3ppjhzAp&_nc_ohc=O8ONcdAWUSkAX9QESgB&_nc_zt=23&_nc_ht=scontent.flos1-2.fna&oh=00_AfAnUmcUlOlZAZoOxQuAUBnB50RzFL3Q1H6KUdvoBrly3g&oe=63718D43);
+    background-image: url(https://scontent.flos1-1.fna.fbcdn.net/v/t1.6435-9/157250536_2785988021730441_2988244583255183517_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a26aad&_nc_eui2=AeHWgj0ZRvu0kmTYOU_1ePT_tvesWAPo-oW296xYA-j6hb0VnWsamOc0PCVFAuYCCQFlYTvLuMRfg1xwBaP-B3cJ&_nc_ohc=3VKuY7Nrz1oAX9dCi_u&_nc_ht=scontent.flos1-1.fna&oh=00_AfCELft90oxPgeBZPDGlV2akXYPAZFJsK4MsnjxSSpMDZA&oe=63EBCBE1);
      height: 100vh;
      background-repeat: no-repeat;
      background-position: center;
